@@ -11,6 +11,8 @@ Release 1.5-1.1 Start 05/09/2024 End 24/12/2024
 05. commands.c, commands.h: added cmd_name() function
 - 21/01/2025
 06. Fix errors when using GCC14
+- 06/05/2025
+07. error.c, error.h: added error_invalid for EINVAL
 
 * Tue Aug 06 2024 12:33:26 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.4-1.1%{?dist}
 Release 1.4-1.1 Start 29/04/2024 End 06/08/2024
